@@ -1,3 +1,7 @@
+2011-01-13  Joel Brobecker  <brobecker@adacore.com>
+
+	* gdb.base/interact.exp: New testcase.
+
 2011-01-12  Tom Tromey  <tromey@redhat.com>
 
 	* gdb.mi/gdb2549.exp: Update for error message changes.
